<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">care grandma</string>
    <string name="action_settings">Settings</string>
    <string name="button_request">Action</string>
    <string name="button_stock">Stocks &amp; Clothing</string>
    <string name="button_test">Test</string>
    <string name="image_grandma">Face</string>
    <string name="about">About</string>
    <string name="general_settings">General settings</string>
    <string name="pause_game">Pause game</string>
    <string name="difficulty_level">Difficulty level</string>
    <string name="difficulty_desc">Define how hard grandma should be!</string>
    <string name="pause_desc">Pauses the game</string>
    <string name="settings">Settings</string>
    <string name="grandmas_name">Grandmas name</string>
    <string name="name_desc">Define grandmas name!</string>
    <string name="set_grandmas_name">Set a name</string>
    <string name="provide_name">Provide a name</string>
    <string name="default_name">Grandma</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="btn_reset">Reset game</string>
    <string name="reset_desc">Resets the current game</string>
    <string name="reset_warning">Are you sure?</string>
    <string name="reset_warning_msg">This will destroy your complete game progress!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="request_msg">What do you want to do?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="loading">Loading&#8230;</string>
    <string name="gameover">GAME OVER!</string>
    <string name="gameover_desc">The wish was not fulfilled in time.</string>
    <string name="notify_title">1 new wish!</string>
    <string name="notify_desc_food">Grandma wants to eat something.</string>
    <string name="notify_desc_dishes">Grandma wants to wash the dishes.</string>
    <string name="notify_desc_drink">Grandma wants to drink something.</string>
    <string name="notify_desc_medi">Grandma need some pills.</string>
    <string name="notify_desc_cloth">Grandma wants another dress.</string>
    <string name="notify_desc_house">Grandma wants to clean the van.</string>
    <string name="notify_desc_sleep">Grandma wants to sleep a while.</string>
    <string name="welcome_desc">Welcome to care grandma!</string>
    <string name="food_msg">What do you want so serve?</string>
    <string name="medicine_msg">What do you want to administer?</string>
    <string name="shopping_msg">What do you want to buy?</string>
    <string name="inventory">Inventory</string>
    <string name="notifydone_title">Wish fulfilled!</string>
    <string name="notifydone_desc_food">Grandma finnished eating.</string>
    <string name="notifydone_desc_dishes">Grandma has washed the dishes.</string>
    <string name="notifydone_desc_drink">Grandma finnished drinking.</string>
    <string name="notifydone_desc_medi">Grandma took some pills.</string>
    <string name="notifydone_desc_cloth">Grandma changed her dress.</string>
    <string name="notifydone_desc_house">Grandma cleaned the van.</string>
    <string name="notifydone_desc_sleep">Grandma slept enough.</string>
    <string name="msg_request_notpossible">Request could not be performed.</string>
    <string name="msg_stock_empty">Theres nothing in your pantry. Please go shopping!</string>

</resources>